========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-03-26

  - Added an optional date argument to convert, so you can provide the requested
    date in a SQL query, as in "CONVERT(sum(position), "CAD", 2015-06-01)".


2016-03-22

  - Support multiple accounts in same ofx file. See
    https://bitbucket.org/blais/beancount/pull-requests/10/. I applied this
    one-liner: issue a balance for each statement, use the maximum date for the
    file_date() method, and added unit tests for this.


2016-03-21

  - Fixed bug in beancount.ingest.file whereby two files being filed to the same
    destination filename would clobber each other; with this fix, instead, an
    error will be generated.

  - Create an example of an importer just filing a PDF file using the external
    tool PDFminer2. If the tool isn't installed, nothing should "break" (but the
    importer won't really do its job). The tests should be skipped
    automatically, and the importing will just ignore the PDF file to be filed.


2016-03-20

  - Implemented beancount.ingest.importers.regexp and
    beancount.ingest.importers.config mixin classes to help support
    functionality which used to be available in LedgerHub.

  - Removed the temporary beancount.ingest.importers.compat
    backwards-compatibility helper for LedgerHub. Not needed.

  - Completed the documentation for the new import framework "beancount.ingest".
    The document is here:
    http://furius.ca/beancount/doc/ingest


2016-03-19

  - Centralized the <3.4 and >=3.4 support for Enum class into
    beancount.utils.misc_utils.Enum.

  - Added an option to the OFX importer to let the instantiator decides whether
    a balance directive should not be inserted (NONE), should be inserted at the
    declared date of a <ledgerbal> tag (DECLARED), or right after the last entry
    imported from the file (LAST).


2016-03-18
